# chordle

./: Cargo.toml  Dockerfile  README.md  build.rs  deny.toml
.github/: dependabot.yml
.github/workflows/: build.yml  docker.yml
.sqlx/: query-0a2132ef042192335c020c57522744ce81865faee592a3044a78fcc401258271.json  query-0c0db6e37ea43fb1474eddbfc6ee940a9333a938269f2cc2f6f7e7efb48fead3.json  query-162a9b9ab66f34a636563a2f1d6e0dce5aae5e37b52863ca59c507180a4ae289.json  query-195df27977a9611ebf742cba70430a377cb4d090944cdb9eefee1a8a11e1b274.json  query-21d08f547b7b844bc5ec7145bb6f6fcdf15bcc918b1fc0509159d1a103d99493.json  query-36be54df6d8c43ba92434c11db946204697e25031ea9ec4c2b57e16288fa91ec.json  query-3df54589d36beb5e4133294baf630b6a152bdf980b1a4de8aedf2cd04048320d.json  query-4ac160adf0c9a1d5d3ba0def5cc61c5717498aff31026ceba25ac4acb920028e.json  query-4be745fcf2a32eae17c1f9f72e25f54771afad6126c6c9146eb31b9f737d414c.json  query-512d7e98c8d3f4f8d0feee77c5269011b249d7fc98904dc53356bc1c013e40eb.json  query-62407e5b63767cec6927da07093e1f4ed083175562b3a969184dbfac69ce88c4.json  query-65c48100a1705366d69b357125357804af72b3c3b304be2f330dfa04ae181600.json  query-6ef2510c96f12970b0222e96242cd770db6b1dd8cb0d3a8982a1ae3c66bc69d2.json  query-6f4a81239ddb7b12167f12b7608281422082f529a008f5a3661b26b0c466a9a0.json  query-72d23eff68e456c9598c21968abb383a2b1cb39fb6292afacac09758eb3efc8a.json  query-78b51105a79bec6f652c3acd85f9de8fc68cc6f0f4b03d3ace719666e2b79d0f.json  query-b52c6d619f80f2d7318949bda4a64543064bb9912a5226d37bd90e5e7809a4cf.json  query-bff19808271facdf32e0f4c99efa7af97f240ba15c4d6191380bbfc7cf84c614.json
migrations/: 20250316202436_chores.sql  20250316205410_events.sql  20250319031221_redo.sql
src/: cli.rs  logging.rs  main.rs
src/db/: mod.rs  query.sql  types.rs
src/stats/: completion_delta.rs  mod.rs  utils.rs
src/web/: mod.rs
src/web/api/: error.rs  health_check.rs  mod.rs  parse_span.rs
src/web/api/chore/: chore.rs  chores.rs  mod.rs  stats.rs
src/web/ui/: cache.rs  error.rs  home.rs  l10n.rs  manifest.json  mod.rs  static_files.rs  styles.css  template.rs
src/web/ui/l10n/: en.ftl  fr.ftl
src/web/ui/manager/: edit.rs  input-errors.js  mod.rs  new.rs  render.rs  settings.rs
src/web/ui/static_files/: loading-spinner.js  manifest.json  (+3 more)
(+1 files in other folders)
