[package]
name = "chordle"
version = "1.0.0-alpha.1"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
description = "A simple button-based chore tracker"
license = "Apache-2.0"
repository = "https://github.com/hamaluik/chordle.git"
homepage = "https://githug.com/hamaluik/chordle"
edition = "2024"
build = "build.rs"

[[bin]]
name = "chordle"
path = "src/main.rs"

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.32", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
color-eyre = "0.6.3"
image = "0.25.5"
jiff = "0.2.4"
maud = { version = "0.27.0", features = ["axum"] }
md5 = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
