[package]
name = "chordle"
version = "1.0.0-alpha.1"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
description = "A simple button-based chore tracker"
license = "Apache-2.0"
repository = "https://github.com/hamaluik/chordle.git"
homepage = "https://githug.com/hamaluik/chordle"
edition = "2024"

[[bin]]
name = "chordle"
path = "src/main.rs"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.1", features = ["cookie"] }
clap = { version = "4.5.32", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
color-eyre = "0.6.3"
fluent = "0.16.1"
image = { version = "0.25.5", default-features = false, features = ["png", "ico"] }
intl-memoizer = "0.5.2"
jiff = { version = "0.2.4", features = ["serde"] }
maud = { version = "0.27.0", features = ["axum"] }
md5 = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", default-features = false, features = ["catch-panic"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
unic-langid = { version = "0.9.5", features = ["macros"] }

[build-dependencies]
fluent = "0.16.1"
fluent-syntax = "0.11.1"

